Ipad fixes: fallback images for when webp isnt supported + fix invisible background titles

--- a/src/components/common/card/card.module.scss
+++ b/src/components/common/card/card.module.scss
@@ -40,7 +40,7 @@
     .img {
       transition: transform 0.5s;
       // Kinda tragic positioning strategy here, but this constellation was the only way to make it work in safari
-      position: absolute;
+      position: absolute !important;
       top: 0;
       min-width: 100%;
       overflow: hidden;
