--- a/src/components/layouts/horizontal-layout/horizontal-layout.module.scss
+++ b/src/components/layouts/horizontal-layout/horizontal-layout.module.scss
@@ -124,10 +124,6 @@
             line-height: $size-8 * 8;
             opacity: 0.4;
 
-            > span {
-              display: block;
-            }
-
             @media (max-width: 1600px) {
               margin-top: $gap-4;
               position: absolute;
